kubernetes/apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webstrike
  labels:
    app.kubernetes.io/part-of: webstrike
