kubernetes/apps/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: webstrike
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: andriiartamonov/webstrike-backend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1500m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: webstrike
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
